--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
 
 
     <Button
-        android:id="@+id/stopCars"
+        android:id="@+id/startCar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start_car"
