--- a/app/src/main/res/layout/layout_host.xml
+++ b/app/src/main/res/layout/layout_host.xml
@@ -4,18 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/hostEd"
-        android:hint="IP地址"
-        android:inputType="text"
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/portEd"
-        android:hint="端口号"
-        android:inputType="number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="正在所有设备"/>
 </LinearLayout>
